<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

   <TextView
       android:id="@+id/Result"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:background="#efefef "
       android:padding="10dp"
       android:textSize="48sp"
       android:gravity="end|bottom"
       />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            />

        <Button
            android:id="@+id/btnEight"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            />

        <Button
            android:id="@+id/btnNine"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            />

        <Button
            android:id="@+id/btnDiv"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Divbtn"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            />

        <Button
            android:id="@+id/btnFive"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            />

        <Button
            android:id="@+id/btnSix"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            />

        <Button
            android:id="@+id/btnMul"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Mulbtn"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            />

        <Button
            android:id="@+id/btnTwo"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            />

        <Button
            android:id="@+id/btnThree"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            />

        <Button
            android:id="@+id/btnSub"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="-"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnDot"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Dot"
            />

        <Button
            android:id="@+id/btnZero"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            />

        <Button
            android:id="@+id/btnCLR"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            />

        <Button
            android:id="@+id/btnAdd"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Plus"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEquals"
            android:layout_margin="2dp"
            android:onClick="onEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Equals"
            />

    </LinearLayout>
</LinearLayout>